# memorine

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: openclaw.md
examples/: multi_agent.py  quickstart.py
extras/openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
memorine/: __init__.py  amygdala.py  cerebellum.py  cli.py  cortex.py  dashboard.py  db.py  embeddings.py  hippocampus.py  mcp_server.py  synapses.py
tests/: test_memorine.py
